<resources>
    <string name="app_name">WeatherApp</string>
    <string name="prompt">Please enter the 5-digit zip code for which you would like to check the weather.</string>
    <string name="zip_code_hint">Zip Code</string>
    <string name="search_button">Search</string>
    <string name="weather_call_failed">The call was unsuccessful. Please try again.</string>
    <string name="weather">Weather</string>
    <string name="degrees">°F</string>
    <string name="weather_description_text">%1$s. High %2$dF. Winds %3$s at %4$d mph.</string>
    <string name="wind_speed_label">Wind Speed</string>
    <string name="wind_speed_value">%1$d m/s</string>
    <string name="pressure_label">Pressure</string>
    <string name="pressure_value">%1$d hpa</string>
    <string name="humidity_label">Humidity</string>
    <string name="humidity_value">%1$d%%</string>
    <string name="sunrise_label">Sunrise</string>
    <string name="sunrise_value">%1$s (UTC)</string>
    <string name="city_value">Measured: %1$s</string>
    <string name="menu_name">Menu</string>
    <string name="menu_item_1">Item 1</string>
    <string name="menu_item_2">Item 2</string>
    <string name="menu_item_3">Item 3</string>
</resources>
